# starting-ragchatbot-codebase

./: .flake8  .gitignore  CLAUDE.md  format.sh  frontend-changes.md  lint.sh  pyproject.toml  quality-check.sh
.claude/commands/: implement-feature.md
backend/: .coverage  ai_generator.py  app.py  search_tools.py
backend/tests/: README.md  __init__.py  conftest.py  test_ai_generator.py  test_api.py  test_rag_system.py  test_search_tools.py
frontend/: index.html  script.js  style.css
